<?xml version="1.0" encoding="utf-8" ?><!DOCTYPE resources [<!ENTITY celsius "\u2103">]>
<resources>
    <string name="app_name">ThermHome</string>
    <string name="first_fragment">FirstFragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="btnFirst">First</string>
    <string name="btnSecond">Second</string>
    <string name="btnGetStatus">Get Status</string>
    <string name="ok">OK</string>
    <string name="cancel">IPTAL</string>
    <string name="dot">.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="text_set">Set: </string>
    <string name="text_room">Oda: </string>
    <string name="fmt_period">%d. period aktif</string>
    <string name="no_period">Aktif period yok!</string>
    <string name="reading_temp">Sıcaklık okunuyor…</string>
    <string name="relay_on">Kombi çalışıyor…!</string>
    <string name="relay_off">Kombi yanmıyor.</string>
    <string name="text_fmt_set">Set: %.2f &celsius;</string>
    <string name="text_fmt_room">Oda: %.2f &celsius;</string>
    <string name="text_null_temp">0.00 &celsius;</string>
    <string name="text_fmt_temp">%.2f &celsius;</string>
    <string name="text_fmt_4f">%.4f</string>
    <string name="text_null_time">00:00</string>
    <string name="btnDelete">Periodu sil</string>
    <string name="btnSave">Kaydet</string>
    <string name="msg_cannot_delete">Son kayıtlı period silinemez!</string>
    <string name="msg_cannot_insert">En fazla 4 period eklenebilir!</string>
    <string name="msg_cannot_read_config">Termostat ayarları okunamıyor!</string>
    <string name="caption_rate">Sıcaklık sensör oranı</string>
    <string name="text_rate">Sensör hassasiyetini belirler</string>
    <string name="caption_sens_rate">Sensör limit derecesi</string>
    <string name="text_sens_rate">Kombinin +/- kaç derecede açıp kapama yapacağını belirler.</string>
    <string name="text_daylight">Yaz saati uygulaması</string>
    <string name="text_timezone">Saat dilimi</string>
    <string name="text_therm_warning_msg">Buradaki ayarlar termostat davranışlarında önemli değişiklere sebep olabilir!</string>
    <string name="caption_sensor">Sensör ayarları</string>
    <string name="caption_thermostat">Termostat ayarları</string>
    <string name="caption_timezone">Saat dilimi ayarları</string>
    <string name="text_gmt">GMT+3</string>
    <string name="btnReset">Fabrika Ayarlarına Dön</string>
    <string name="version">v%1$s</string>

</resources>