<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.thermhome.ui.SettingsPage">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_settings_logo"
                    android:backgroundTint="@color/light_blue_400"
                    android:contentDescription="@string/text_set"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btnHome"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_back"
                    android:contentDescription="@string/btnSecond"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/caption_thermostat"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/btnHome"
                    app:layout_constraintTop_toBottomOf="@+id/btnHome" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/LabelComment"
                    android:textAlignment="textStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/text_therm_warning_msg"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/version"
                    style="@style/LabelComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@{@string/version(@string/versionName)}"
                    android:textColor="@color/light_blue_200"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </FrameLayout>

        <ScrollView
            android:id="@+id/scoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutSensor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/CaptionSensor"
                        style="@style/Caption_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/caption_sensor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/labelFmtRate"
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/caption_rate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/CaptionSensor" />

                    <TextView
                        android:id="@+id/textRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:text="@{@string/text_fmt_4f(config.rate)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/labelFmtRate" />

                    <TextView
                        android:id="@+id/labelRate"
                        style="@style/LabelComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/text_rate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labelFmtRate" />

                    <SeekBar
                        android:id="@+id/seekBarRate"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="36dp"
                        android:max="600"
                        android:min="400"
                        android:progress="@{Converters.floatToInt(10000, config.rate)}"
                        android:tickMarkTint="@color/light_blue_400"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labelRate" />
                    
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider1"
                    style="@style/Divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutSensor" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutSensorLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/divider1">

                    <TextView
                        android:id="@+id/labelFmtRateLimit"
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/caption_sens_rate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textRateLimit"
                        android:layout_marginEnd="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@{@string/text_fmt_temp(config.tempSensRate)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/labelFmtRateLimit" />

                    <TextView
                        android:id="@+id/labelRateLimit"
                        style="@style/LabelComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/text_sens_rate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labelFmtRateLimit" />

                    <SeekBar
                        android:id="@+id/seekBarRateLimit"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="36dp"
                        android:max="150"
                        android:min="15"
                        android:progress="@{Converters.floatToInt(100, config.tempSensRate)}"
                        android:tickMarkTint="@color/light_blue_400"
                        app:layout_constraintTop_toBottomOf="@+id/labelRateLimit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider2"
                    style="@style/Divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSensorLimit" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTimezone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/divider2">

                    <TextView
                        android:id="@+id/captionTimezone"
                        style="@style/Caption_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/caption_timezone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textDaylight"
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_daylight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/captionTimezone" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swcDayLight"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:checked="@={Converters.intToBool(config.daylightSaving)}"
                        app:layout_constraintBottom_toTopOf="@+id/textTimezone"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/textTimezone"
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/caption_timezone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textDaylight" />

                    <TextView
                        android:id="@+id/btnTimezone"
                        android:layout_width="100dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_corner"
                        android:gravity="center"
                        android:text="@string/text_gmt"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textTimezone" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                
                <View
                    android:id="@+id/divider3"
                    style="@style/Divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTimezone" />

                <Button
                    android:id="@+id/btnSave"
                    android:text="@string/btnSave"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" 
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@android:color/widget_edittext_dark"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
                    android:backgroundTint="@android:color/holo_green_dark"/>

                <Button
                    android:id="@+id/btnReset"
                    android:maxWidth="280dp"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnReset"
                    app:layout_constraintEnd_toEndOf="parent" 
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnSave" 
                    android:textColor="@android:color/widget_edittext_dark"
                    android:backgroundTint="@android:color/holo_orange_dark"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>

        <import type="com.example.thermhome.util.Converters" />

        <variable
            name="config"
            type="com.example.thermhome.data.TempConfig" />
    </data>
</layout>
