<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:padding="2dp">

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_remove"
            android:contentDescription="@string/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnTemp"
            style="@style/Widget.Theme.ThermHome.MyView.ScheduleButton"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_null_temp"
            app:layout_constraintStart_toEndOf="@id/btnDelete"
            app:layout_constraintEnd_toStartOf="@id/btnStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.Theme.ThermHome.MyView.ScheduleButton"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_null_time"
            app:layout_constraintStart_toEndOf="@id/btnTemp"
            app:layout_constraintEnd_toStartOf="@id/btnEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnEnd"
            style="@style/Widget.Theme.ThermHome.MyView.ScheduleButton"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_null_time"
            app:layout_constraintStart_toEndOf="@id/btnStart"
            app:layout_constraintEnd_toStartOf="@id/swcEnable"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swcEnable"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/btnEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
