<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.thermhome.ui.MainPage">

    <data>

        <variable
            name="statusViewModel"
            type="com.example.thermhome.viewmodel.ThermStatus" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:rowCount="2">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/tempWidget"
                android:name="com.example.thermhome.ui.TempWidget"
                android:layout_width="280dp"
                android:layout_row="0"
                android:layout_rowWeight="0.12"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                tools:layout="@layout/temp_widget" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lstSchedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_margin="4dp"
                android:listSelector="@android:color/transparent"
                tools:listitem="@layout/schedule" />

        </GridLayout>

        <ImageButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_refresh"
            android:contentDescription="@string/btnGetStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_settings"
            android:contentDescription="@string/btnFirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"
            android:clickable="true"
            android:contentDescription="@string/second_fragment"
            android:src="@android:drawable/ic_input_add"
            android:theme="@style/Widget.Theme.ThermHome.MyView.FloatingButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>